feat: adiciona dicionário privado para estudo local
